--- a/phraseRecognPrototype/phraseRecognPrototype.csproj
+++ b/phraseRecognPrototype/phraseRecognPrototype.csproj
@@ -54,5 +54,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="TaggedWordsDictionary.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
