--- a/phraseRecognPrototype/phraseRecognPrototype.csproj
+++ b/phraseRecognPrototype/phraseRecognPrototype.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A25DCAAA-47A5-41D5-A37A-877EF3ADC279}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>phraseRecognPrototype</RootNamespace>
-    <AssemblyName>phraseRecognPrototype</AssemblyName>
+    <RootNamespace>PhraseRecognPrototype</RootNamespace>
+    <AssemblyName>PhraseRecognPrototype</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,13 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DicOfTaggedWords.cs" />
+    <Compile Include="TaggedWordsDictionary.cs" />
     <Compile Include="InputToken.cs" />
-    <Compile Include="ManagerOfInputText.cs" />
+    <Compile Include="InputTextManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TaggedWordFromDic.cs" />
+    <Compile Include="TaggedWord.cs" />
     <Compile Include="Tagger.cs" />
+    <Compile Include="Tags.cs" />
     <Compile Include="Tokenizer.cs" />
   </ItemGroup>
   <ItemGroup>
