--- a/phraseRecognPrototype/phraseRecognPrototype.csproj
+++ b/phraseRecognPrototype/phraseRecognPrototype.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaggedWord.cs" />
     <Compile Include="Tagger.cs" />
-    <Compile Include="Tags.cs" />
+    <Compile Include="TagsManager.cs" />
     <Compile Include="Tokenizer.cs" />
   </ItemGroup>
   <ItemGroup>
