some refactoring - code comments was taken into account, added ConstantValues class, refined phrase recognition way; started work on corresponding DateTime generation

--- a/phraseRecognPrototype/phraseRecognPrototype.csproj
+++ b/phraseRecognPrototype/phraseRecognPrototype.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConstantValues.cs" />
     <Compile Include="TaggedWordsDictionary.cs" />
     <Compile Include="InputToken.cs" />
     <Compile Include="InputTextManager.cs" />
