regexp patterns were corrected; new ParseDateAndTime method was picked out from Program.Main; coding-conventions from docs.microsoft.com were taken into account; added TestPhrases.txt in order to make testing easier

--- a/phraseRecognPrototype/phraseRecognPrototype.csproj
+++ b/phraseRecognPrototype/phraseRecognPrototype.csproj
@@ -60,6 +60,7 @@
     <Content Include="TaggedWordsDictionary.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="TestPhrases.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
