--- a/BOTFirst/BOTFirst/Web.config
+++ b/BOTFirst/BOTFirst/Web.config
@@ -19,7 +19,7 @@
       </system.Web>
   -->
   <system.web>
-    <customErrors mode="Off" /> 
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
   </system.web>
@@ -30,13 +30,13 @@
         <add value="default.htm" />
       </files>
     </defaultDocument>
-    
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -65,4 +65,17 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <connectionStrings>
+    <add name="EDModelContainer" connectionString="metadata=res://*/EDModel.csdl|res://*/EDModel.ssdl|res://*/EDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=USEROK-ПК\SQLEXPRESS;initial catalog=achievementbotdb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
