--- a/BOTFirst/EntityModel/EntityModel.csproj
+++ b/BOTFirst/EntityModel/EntityModel.csproj
@@ -72,13 +72,31 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>EDModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="FullAchievement.cs">
+      <DependentUpon>EDModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="MeasureUnit.cs">
+      <DependentUpon>EDModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Messenger.cs">
+      <DependentUpon>EDModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="MessengerAndUserInfo.cs">
       <DependentUpon>EDModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Phrase.cs">
       <DependentUpon>EDModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShortAchievement.cs">
+      <DependentUpon>EDModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="User.cs">
+      <DependentUpon>EDModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UserAchievement.cs">
+      <DependentUpon>EDModel.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="EDModel.edmx">
