Модуль распознавания фраз
Перенес все необходимые файлы, оформил логику в виде PhraseDialog  и сформировал класс, описывающий фразу человека

--- a/BOTFirst/BOTFirst/BotEngine.csproj
+++ b/BOTFirst/BOTFirst/BotEngine.csproj
@@ -112,6 +112,8 @@
   <ItemGroup>
     <Content Include="default.htm" />
     <Content Include="Global.asax" />
+    <Content Include="modul_rec_phr\TaggedWordsDictionary.txt" />
+    <Content Include="modul_rec_phr\TestPhrases.txt" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -119,10 +121,20 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
+    <Compile Include="Dialogs\PhraseDialog.cs" />
     <Compile Include="Dialogs\RootDialog.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="modul_rec_phr\ConstantValues.cs" />
+    <Compile Include="modul_rec_phr\InputTextManager.cs" />
+    <Compile Include="modul_rec_phr\InputToken.cs" />
+    <Compile Include="modul_rec_phr\TaggedWord.cs" />
+    <Compile Include="modul_rec_phr\TaggedWordsDictionary.cs" />
+    <Compile Include="modul_rec_phr\Tagger.cs" />
+    <Compile Include="modul_rec_phr\TagsManager.cs" />
+    <Compile Include="modul_rec_phr\Tokenizer.cs" />
+    <Compile Include="Phrase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
