--- a/BOTFirst/BOTFirst/Web.config
+++ b/BOTFirst/BOTFirst/Web.config
@@ -16,9 +16,9 @@
   </entityFramework>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
-    <add key="BotId" value="YourBotId" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="BotId" value="achievementbot" />
+    <add key="MicrosoftAppId" value="4eb6cf77-4b92-4004-8ac9-c91b4b90e05f" />
+    <add key="MicrosoftAppPassword" value="1JFgHEe7nvz8nVAF6YH3LL2" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
