--- a/BOTFirst/EntityModel/EntityModel.csproj
+++ b/BOTFirst/EntityModel/EntityModel.csproj
@@ -51,6 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Achievement.cs">
+      <DependentUpon>EDModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AchievementForm.cs">
+      <DependentUpon>EDModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Action.cs">
       <DependentUpon>EDModel.tt</DependentUpon>
     </Compile>
@@ -72,29 +78,23 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>EDModel.edmx</DependentUpon>
     </Compile>
-    <Compile Include="FullAchievement.cs">
-      <DependentUpon>EDModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="MeasureUnit.cs">
       <DependentUpon>EDModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Messenger.cs">
       <DependentUpon>EDModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="MessengerAndUserInfo.cs">
-      <DependentUpon>EDModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Phrase.cs">
       <DependentUpon>EDModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShortAchievement.cs">
-      <DependentUpon>EDModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="User.cs">
       <DependentUpon>EDModel.tt</DependentUpon>
     </Compile>
     <Compile Include="UserAchievement.cs">
+      <DependentUpon>EDModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UserMessenger.cs">
       <DependentUpon>EDModel.tt</DependentUpon>
     </Compile>
   </ItemGroup>
