--- a/BOTFirst/BotPhrase/PhraseRecognizer.csproj
+++ b/BOTFirst/BotPhrase/PhraseRecognizer.csproj
@@ -44,6 +44,7 @@
     <Compile Include="InputTextManager.cs" />
     <Compile Include="InputToken.cs" />
     <Compile Include="Phrase.cs" />
+    <Compile Include="PhrasesConverter.cs" />
     <Compile Include="Recognizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaggedWord.cs" />
@@ -53,7 +54,7 @@
     <Compile Include="Tokenizer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TaggedWordsDictionary.txt" />
+    <EmbeddedResource Include="TaggedWordsDictionary.txt" />
     <Content Include="TestPhrases.txt" />
   </ItemGroup>
   <ItemGroup>
