--- a/BOTFirst/EntityModel/App.Config
+++ b/BOTFirst/EntityModel/App.Config
@@ -11,6 +11,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="EDModelContainer" connectionString="metadata=res://*/EDModel.csdl|res://*/EDModel.ssdl|res://*/EDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=USEROK-ПК\SQLEXPRESS;initial catalog=achievementbotdb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EDModelContainer" connectionString="metadata=res://*/EDModel.csdl|res://*/EDModel.ssdl|res://*/EDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=achievementbotdb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
