--- a/BOTFirst/BOTFirst/BotEngine.csproj
+++ b/BOTFirst/BOTFirst/BotEngine.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="PhrasesConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
