--- a/BOTFirst/BOTFirst/BotEngine.csproj
+++ b/BOTFirst/BOTFirst/BotEngine.csproj
@@ -124,7 +124,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="PhrasesConverter.cs" />
+    <Compile Include="PhrasesFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsersFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
