Implemented creating and adding achievements, userAchievements; entity model changes. 1. Now user can add new userAchievement, including achievement name (Achievement objects). If an achievement already was added, then it would be used instead of adding the same achievement. 2. Users adding debug logic was moved from MessagesController to UsersFactory.UserAddingDebug. 3. Duplicate catch block for debugging work with DB was exposed to EntityModel.EntitiesErrorsCatcher. 4. Now .Any method is used to check whether some object exists in DB instead of .Where(...).Count() > 0.

--- a/BOTFirst/EntityModel/EntityModel.csproj
+++ b/BOTFirst/EntityModel/EntityModel.csproj
@@ -54,9 +54,6 @@
     <Compile Include="Achievement.cs">
       <DependentUpon>EDModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="AchievementForm.cs">
-      <DependentUpon>EDModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Action.cs">
       <DependentUpon>EDModel.tt</DependentUpon>
     </Compile>
@@ -78,6 +75,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>EDModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="EntitiesErrorsCatcher.cs" />
     <Compile Include="MeasureUnit.cs">
       <DependentUpon>EDModel.tt</DependentUpon>
     </Compile>
@@ -108,7 +106,9 @@
     <None Include="EDModel.edmx.diagram">
       <DependentUpon>EDModel.edmx</DependentUpon>
     </None>
-    <None Include="App.Config" />
+    <None Include="App.Config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
