--- a/BOTFirst/BOTFirst/BotEngine.csproj
+++ b/BOTFirst/BOTFirst/BotEngine.csproj
@@ -116,6 +116,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factories\AchievementsFactory.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Dialogs\PhraseDialog.cs" />
@@ -124,9 +125,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="PhrasesConverter.cs" />
-    <Compile Include="PhrasesFactory.cs" />
+    <Compile Include="Factories\PhrasesFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UsersFactory.cs" />
+    <Compile Include="Factories\UsersFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
@@ -149,6 +150,7 @@
       <Name>EntityModel</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
