--- a/BOTFirst/BOTFirst/Web.config
+++ b/BOTFirst/BOTFirst/Web.config
@@ -76,6 +76,9 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
+    <!--
     <add name="EDModelContainer" connectionString="metadata=res://*/EDModel.csdl|res://*/EDModel.ssdl|res://*/EDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=achievementbotdb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    -->
+    <add name="EDModelContainer" connectionString="metadata=res://*/EDModel.csdl|res://*/EDModel.ssdl|res://*/EDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:achievementbot.database.windows.net,1433;initial catalog=db;user id=abot;password=superPASSWORD1!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
